--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,7 @@ h1, h2 {
 }
 
 h3 {
-  text-align: center;
-  margin-top: 60px;
+  margin-top: 30px;
 }
 
 .colour-picker div {
@@ -59,5 +58,17 @@ h3 {
 }
 
 h2 {
-  margin-bottom: 100px;
+  margin-bottom: 40px;
+}
+
+input[type=range] {
+  width: 100%;
+}
+
+.center {
+  text-align: center;
+}
+
+.right {
+  text-align: right;
 }
